# py-_project-template

./: LICENSE  README.md  noxfile.py  pyproject.toml  rename-project.sh
.github/workflows/: tests.yml
