[tool.poetry]
name = "myproject"
version = "0.0.0"
description = ""
authors = ["Mark Vartanyan <kolypto@gmail.com>"]
repository = 'https://github.com/kolypto/py-myproject'
include = ["myproject/py.typed"]
license = ""

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
nox = ">= 2022.1.7"
pytest = ">= 7.1.2"
pytest-cov = ">= 3.0.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests/",
]

# all markers: $ pytest --markers
markers = [
    'extra: optional tests (mypy, etc)'
]
